# airflow-provider-fivetran-async

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg
.github/scripts/: verify_tag_and_version.py
.github/workflows/: ci.yml
dev/: Dockerfile  docker-compose.yaml  requirements.txt
dev/dags/: .airflowignore  example_fivetran.py  example_fivetran_bigquery.py  example_fivetran_bqml.py  example_fivetran_dbt.py  example_fivetran_resync.py  example_fivetran_without_connector_id.py  example_fivetran_xcom.py
docs/: how_to_contribute.md
fivetran_provider_async/: __init__.py  compat.py  hooks.py  operators.py  sensors.py  triggers.py  version_compat.py
fivetran_provider_async/example_dags/: example_fivetran.py  example_fivetran_async.py  example_fivetran_bigquery.py  example_fivetran_bqml.py  example_fivetran_dbt.py  example_fivetran_resync.py  example_fivetran_without_connector_id.py  example_fivetran_xcom.py
fivetran_provider_async/hooks/: fivetran.py
fivetran_provider_async/operators/: fivetran.py
fivetran_provider_async/sensors/: fivetran.py
fivetran_provider_async/triggers/: __init__.py  fivetran.py
fivetran_provider_async/utils/: operator_utils.py
hooks/: fivetran.py
scripts/test/: integration-setup.sh  integration.sh  pre-install-airflow.sh  unit-cov.sh  unit.sh
sensors/: fivetran.py
tests/: test_example_dags.py  test_utils.py
tests/common/: static.py
tests/hooks/: test_fivetran.py
tests/integrations/: test_basic.py  test_example_dags.py
tests/operators/: fivetran.py  test_fivetran.py
tests/sensors/: test_fivetran.py
tests/triggers/: test_fivetran.py
tests/utils/: test_operator_utils.py
triggers/: fivetran_trigger.py
