[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airflow-provider-fivetran-async"
dynamic = ["version"]
description = "A Fivetran async provider for Apache Airflow"
authors = [{ name = "Astronomer & Fivetran", email = "humans@astronomer.io" }]
readme = "README.md"
license = "Apache-2.0"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.10"
keywords = ["airflow", "apache-airflow", "provider", "astronomer", "dag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Database",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "apache-airflow>=2.9.0",
    "aiohttp",
    "asgiref",
    "requests",
]

[project.optional-dependencies]
openlineage = [
    "openlineage-airflow>=0.19.2",
]
all = [
    "openlineage-airflow>=0.19.2",
]
tests = [
    "mypy",
    "types-requests",
    "parameterized",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests_mock",
    "prek",
]

######################################
# TESTING
######################################

[tool.hatch.envs.tests]
# Do not install Airflow or OpenLineage dependencies here!
# They are installed in the `pre-install-commands` to control the Airflow version
dependencies = [
    "aiohttp",
    "asgiref",
    "requests",
    "mypy",
    "types-requests",
    "parameterized",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests_mock",
    "prek",
]
pre-install-commands = ["sh scripts/test/pre-install-airflow.sh {matrix:airflow} {matrix:python}"]

[[tool.hatch.envs.tests.matrix]]
python = ["3.10", "3.11", "3.12"]
airflow = ["2.9", "2.10", "3.0"]

[[tool.hatch.envs.tests.matrix]]
python = ["3.13"]
airflow = ["3.0"]

[tool.hatch.envs.tests.scripts]
freeze = "pip freeze"
static-check = "prek run --files fivetran_provider_async/*"
test = 'sh scripts/test/unit.sh'
test-integration = 'sh scripts/test/integration.sh'
test-integration-setup = 'sh scripts/test/integration-setup.sh'

[project.entry-points.apache_airflow_provider]
provider_info = "fivetran_provider_async.__init__:get_provider_info"

[project.urls]
Source = "https://github.com/astronomer/airflow-provider-fivetran-async"

[tool.hatch.version]
path = "fivetran_provider_async/__init__.py"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.sdist]
include = ["fivetran_provider_async"]

[tool.hatch.build.targets.wheel]
packages = ["fivetran_provider_async"]

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
minversion = "6.0"
markers = ["integration"]

######################################
# THIRD PARTY TOOLS
######################################

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C901",
    "D300",
    "I",
    "F",
    "G",    # flake8-logging-format
]
ignore = ["F541", "C901"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["fivetran_provider_async", "tests"]

[tool.ruff.lint.mccabe]
max-complexity = 10
