[metadata]
name = airflow-provider-fivetran-async
version = 1.1.2
url = https://github.com/astronomer/airflow-provider-fivetran-async
author = Astronomer & Fivetran
author_email = humans@astronomer.io
description = A Fivetran async provider for Apache Airflow
long_description = file: README.md
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code=https://github.com/astronomer/airflow-provider-fivetran-async
    Changelog=https://github.com/astronomer/airflow-provider-fivetran-async/blob/main/CHANGELOG.md
    Bug Tracker = https://github.com/astronomer/airflow-provider-fivetran-async/issues

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
install_requires =
    apache-airflow>=2.2.0
    aiohttp
    asgiref
    airflow-provider-fivetran


[options.extras_require]
tests =
    parameterized
    pytest
    pytest-asyncio
    pytest-cov

[options.entry_points]
apache_airflow_provider=
  provider_info=fivetran_provider_async.__init__:get_provider_info

[flake8]
enable-extensions=G
exclude = venv/*,tox/*,specs/*
ignore = E123,E128,E266,RST303,E402,W503,E731,W601,TYP001
max-line-length = 110
